
7/9/2014

- Added <default> tag and desktop attribute to window configuration files (.cvnx) 
  Example:
     <default win="0,0,600,400" desktop="0" ontop="no"/>
     <vm name="h1" win="0,0,600,400" ontop="yes"/>
- Added <vnx_cfg> tag to specify the windows configuration filename (if not specified VNX looks for a file with the same name as the scenario but with extension .cvnx) 
    Example:
        <vnx_cfg>tutorial_lxc_ubuntu2.cvnx</vnx_cfg>
  Besides, the config file is copied to scenario directory to find it when -s option used

- Added "-n" option to vnx_download_rootfs to eliminate wget progress bars (disturbing when using it inside bootstrap vagrant shellscripts).

26/08/2014

- Added aufs_options parameter to [lxc] section of vnx.conf 

  [lxc]
  aufs_options = 'noxino' # comma separated list of options (without comma at the end)
  
- Added host_passthrough option to [libvirt]. Substitutes   

- Added --download-rootfs option to call vnx_download_rootfs: 'vnx --download-rootfs'

- Added new type of VM: Name spaces based routers (nsrouter). Added tutorial_nsrouter.xml example.     

- VNX bash autocompletion file copied also to /usr/share/bash-completion/completions/ (seems to be the default dir in Ubuntu) apart from /etc/bash_completion.d/

- Added check_perlmods_mandatory to BinariesData module to check whether the perl modules required by VNX are installed    

24/07/2014:

- vnx_update command improved. It allows to:
   + get a listing of all versions available on VNX repository in "http://idefix.dit.upm.es/vnx" using -l option:
        vnx_update -l
   + install a specific version (not the latests) with -v option:
        vnx_update -v 2.0b.4199
        
- <ssh_key> tag:
   + implemented for LXC VMs
   + bug corrected for KVM (need to create directory /root/.ssh in VM if non-existant)
   
- Bug corrected in -s option: it was supposed that the scenario XML file name was the 