@@ -264,20 +264,18 @@ change_to_root();
         $execution->execute( $logp, "echo $vm_name > ${vm_lxc_rootfs}/etc/hostname" ); 
         # Ex: sed -i -e "s/127.0.1.1.*/127.0.1.1   lxc1/" /var/lib/lxc/lxc1/rootfs/etc/host
         $execution->execute( $logp, "sed -i -e 's/127.0.1.1.*/127.0.1.1   $vm_name/' ${vm_lxc_rootfs}/etc/hosts" ); 
-
         # Copy SSH keys if <ssh> tag specified in scenario
-        if( $doc->exists("/create_conf/vm/ssh_key") ){
-            my @ssh_key_list = $doc->findnodes('/create_conf/vm/ssh_key');
+        if( $vm_doc->exists("/create_conf/vm/ssh_key") ){
+            my @ssh_key_list = $vm_doc->findnodes('/create_conf/vm/ssh_key');
             # Copy ssh key files content to $ssh_key_dir/ssh_keys file
             foreach my $ssh_key (@ssh_key_list) {
                 my $key_file = do_path_expansion( text_tag( $ssh_key ) );
-                wlog (V, "<ssh_key> file: $key_file");
+                wlog (V, "<ssh_key> file: $key_file (" . text_tag($ssh_key) . ")");
                 $execution->execute( $logp, "mkdir ${vm_lxc_rootfs}/root/.ssh/" );
                 $execution->execute( $logp, $bd->get_binaries_path_ref->{"cat"}
                                      . " $key_file >>" . "${vm_lxc_rootfs}/root/.ssh/authorized_keys" );
             }
         }
-
         # Modify LXC VM config file
         # Backup config file just in case...
         $execution->execute( $logp, "cp $vm_lxc_config $vm_lxc_config" . ".bak" ); 
@@ -907,7 +905,6 @@ sub execute_cmd {
     my $sub_name = (caller(0))[3]; wlog (VVV, "$sub_name (vm=$vm_name, type=$merged_type, seq=$seq ...)", $logp);
 
     my $random_id  = &generate_random_string(6);
-
 
     if ($merged_type eq "lxc")    {
         
